--- a/src/Components/UI/Card.css
+++ b/src/Components/UI/Card.css
@@ -21,3 +21,12 @@
     padding: 0.5rem;
     margin: 1rem 0 1rem 20%;
 }
+.Expenses-Containers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    left: 50%;
+    background-color: #4b4b4b;
+    width: 50%;
+    margin: 1rem 0 1rem 20%;
+}
